sas-core/main/default/objects/Passenger__c/Passenger__c.object-meta.xml
<CustomObject>
    <description>Individual passenger in a booking.

Related to accounts through EB number if one is included in a booking.</description>
    <label>Passenger</label>
    <nameField>
        <label>Passenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>