sas-core/main/default/objects/Passenger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the passenger record has an EB number, this field is populated with the corresponding person account.</description>
    <inlineHelpText>If the passenger record has an EB number, this field is populated with the corresponding person account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>PassengerRecords</relationshipName>
    <type>Lookup</type>
</CustomField>