sas-core/main/default/objects/Passenger__c/fields/EuroBonus_Number__c.field-meta.xml
<CustomField>
    <fullName>EuroBonus_Number__c</fullName>
    <label>EuroBonus Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>