sas-core/main/default/objects/Passenger__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>A constant identifier to identify this passenger in this booking. Unique within the booking.</description>
    <inlineHelpText>A constant identifier to identify this passenger in this booking. Unique within the booking.</inlineHelpText>
    <label>Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>